fixed horizontal scroll and remove page 'percussao'

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ html, body {
 	padding: 0;
 }
 
+#index-body{
+	overflow-x: hidden;
+}
+
 .titulo{
 	text-align:center;
 }
@@ -104,4 +108,8 @@ textarea{
 
 .menu {
   padding-top:40px;  
+}
+
+#header{
+	overflow:hidden;
 }
